--- a/Fenix/css/main.css
+++ b/Fenix/css/main.css
@@ -39,6 +39,11 @@ a:hover {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.3%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
+#nav-fenix.scrolled {
+  background-color: #fff !important;
+  transition: background-color 200ms linear;
+}
+
 #carrusel .carru img {
   width: 100%;
   height: 100vh;
@@ -137,9 +142,16 @@ section {
 }
 
 .card-productos {
-  width: 200px;
-  height: 200px;
+  min-height: 220px;
+  min-width: 200px;
   border-radius: 30px;
+  margin-bottom: 25px;
+}
+
+.btn-oferta{
+  position: absolute;
+  right: 0;
+  bottom: 20px;
 }
 
 .img-tapabocas {
