--- a/Fenix/css/main.css
+++ b/Fenix/css/main.css
@@ -8,7 +8,9 @@ h3,
 h4,
 h5,
 h6,
-p {
+button,
+p,
+a {
   font-family: 'Lato', Helvetica, sans-serif !important;
   color: #111;
   font-weight: bold;
@@ -185,6 +187,17 @@ section {
 .sucursal:hover {
   filter: opacity(.75) saturate(.75) brightness(80%) contrast(150%);
   -webkit-filter: opacity(.75) saturate(.75) brightness(80%) contrast(150%);
+}
+
+.degradado{
+  background-color: transparent;
+  background: -moz-linear-gradient(bottom, rgb(255, 255, 255) 30%, transparent);
+  background: -webkit-linear-gradient(bottom, rgb(255, 255, 255) 30%, transparent);
+  background: linear-gradient(to bottom, rgb(255, 255, 255) 30%, transparent);
+  height: 50px;
+  margin-bottom: -30px;
+  z-index: 9;
+  position: relative;
 }
 
 .dataf {
