--- a/Fenix/css/main.css
+++ b/Fenix/css/main.css
@@ -156,6 +156,12 @@ section {
   bottom: 20px;
 }
 
+.img-marca{
+  height: 120px;
+  width: 100%;
+  object-fit: scale-down;
+}
+
 .img-tapabocas {
   height: 300px;
   width: auto;
