--- a/Fenix/css/main.css
+++ b/Fenix/css/main.css
@@ -318,6 +318,10 @@ section {
     padding: .5rem !important;
   }
 
+  #consultanos .col-12 {
+    text-align: center !important;
+  }
+
   #footer {
     padding-left: 20px;
     padding-right: 20px;
