--- a/Fenix/css/main.css
+++ b/Fenix/css/main.css
@@ -42,9 +42,9 @@ a:hover {
 
 #nav-fenix .navbar-brand {
   min-width: 200px;
-  width: 300px;
+  width: 280px;
   margin-top: -15px;
-  padding: 20px 25px 25px 25px;
+  padding: 20px 25px 20px 25px;
   border-radius: 0 0 15px 15px;
 }
 
@@ -155,19 +155,24 @@ section {
 
 .fa-round {
   border: 3px solid white;
-  padding: 8px;
+  padding: 9px;
   border-radius: 100%;
 }
 
 .btn-envios {
   margin-top: 10px;
-  height: 58px;
+  height: 68px;
+  font-size: 1.75rem!important;
 }
 
 .btn-envios .fa-whatsapp {
   margin-top: -10px;
-  font-size: 40px !important;
+  margin-left: 3px;
+  font-size: 50px !important;
   vertical-align: middle;
+}
+.img-delivery{
+  width: 550px;
 }
 
 .label {
@@ -251,10 +256,33 @@ section {
   bottom: 25px;
   left: 40px;
 }
+.sucursal .horarios{
+  opacity: 0;
+  height: 0;
+  transform: scaleY(0);
+}
+
+.sucursal:hover .horarios{
+  display: inline-block!important;
+  opacity: 1;
+  overflow: hidden;
+  transition: transform 0.25s ease-out;
+  height: auto;
+  transform: scaleY(1);
+  transform-origin: bottom;
+}
 
 .sucursal:hover {
-  filter: opacity(.75) saturate(.85) brightness(85%) contrast(130%);
-  -webkit-filter: opacity(.75) saturate(.85) brightness(85%) contrast(130%);
+  filter: opacity(.85) saturate(.85) brightness(85%) contrast(130%);
+  -webkit-filter: opacity(.85) saturate(.85) brightness(85%) contrast(130%);
+}
+
+.cartero{
+  position: absolute;
+  bottom: 0;
+  right: 25%;
+  left: 25%;
+  max-height: 110%;
 }
 
 .degradado {
@@ -356,6 +384,8 @@ section {
 
   #envios .fa-whatsapp {
     margin-bottom: -8px;
+    margin-left: 0;
+    font-size: 40px !important;
   }
 
   #covid .row .px-4 {
@@ -397,8 +427,8 @@ section {
   }
 
   #footer .label {
-    border-radius: 0 0 12px 12px;
-    margin: -80px 10px 0px 10px;
+    border-radius: 0 0 8px 8px;
+    margin: -80px 8px 0px 8px;
   }
 
   #footer .col-3 {
@@ -425,7 +455,7 @@ section {
 
   #nav-fenix .navbar-brand{
     min-width: 100px;
-    max-width: 180px;
+    max-width: 165px;
     padding: 10px 15px 15px 15px;
     margin-top: 0;
   }
@@ -455,6 +485,7 @@ section {
 
   .btn-envios {
     height: 50px;
+    font-size: 1.25rem!important;
   }
 
   #envios .label {
@@ -475,11 +506,18 @@ section {
     padding: 0 !important;
   }
 
+  .cartero{
+    display: none;
+  }
+
   .img-tapabocas {
     height: 160px;
     right: -10px;
   }
 
+  #tel-covid h1 {
+    line-height: 30px!important;
+  }
   #contactanos .pl-5 {
     padding-left: 0 !important;
   }
