--- a/bac-template/css/main.css
+++ b/bac-template/css/main.css
@@ -274,6 +274,27 @@ footer {
     footer .img-footer {
         display: none;
     }
+    
+    #wzp{
+        position: fixed;
+        width: 55px;
+        height: 55px;
+        bottom: 10px;
+        right: 10px;
+        background-color: #25d366 !important;
+        color: #FFF !important;
+        border-radius: 50px;
+        text-align: center;
+        font-size: 30px!important;
+        box-shadow: 1px 1px 5px #666;
+        z-index: 1000;
+        display: grid !important;
+    }
+    #wzp a{
+        color: #fff;
+        font-size: 30px!important;
+        margin-top: 5px;
+    }
 }
 
 @media screen and (max-width:575px) {
