--- a/Fenix/css/main.css
+++ b/Fenix/css/main.css
@@ -66,7 +66,7 @@ a:hover {
 }
 
 #carrusel {
-  margin-top: -100px;
+  margin-top: -88px;
 }
 
 #carrusel .carru img {
@@ -115,6 +115,10 @@ a:hover {
   opacity: 1 !important;
 }
 
+#productos .carru-prod{
+  margin-left: -50px;
+  margin-right: -50px;
+}
 #productos .carru-prod .slick-slide img {
   margin: auto;
 }
