--- a/Fenix/css/main.css
+++ b/Fenix/css/main.css
@@ -29,6 +29,7 @@ a:hover {
   background: -moz-linear-gradient(bottom, rgb(255, 255, 255) 80%, transparent 100%);
   background: -webkit-linear-gradient(bottom, rgb(255, 255, 255) 80%, transparent 100%);
   background: linear-gradient(to bottom, rgb(255, 255, 255) 80%, transparent 100%);
+  z-index: 99999;
 }
 
 #nav-fenix .navbar-toggler {
@@ -67,6 +68,7 @@ a:hover {
 
 #carrusel {
   margin-top: -88px;
+  z-index: -1;
 }
 
 #carrusel .carru img {
@@ -77,7 +79,7 @@ a:hover {
 
 #carrusel .carru {
   margin-top: -50px;
-  z-index: -1;
+  z-index: 0;
 }
 
 #carrusel .card-carrusel {
@@ -128,10 +130,11 @@ a:hover {
   margin: 0;
 }
 
-section {
+section {  
+  position: relative;
   padding-right: 50px;
   padding-left: 50px;
-  z-index: 999999;
+  z-index: 9999;
   background-color: #fff;
   padding-top: 80px;
   border-radius: 50px 50px 0 0;
@@ -329,7 +332,7 @@ section {
   }
 
   .sucursal img {
-    filter: brightness(0.5);
+    filter: brightness(0.75);
   }
 
   #conocenos .offset-1 {
